# ChangeLog for dev-python/acutil
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.1.ebuild:
  version bump

*acutil-6.1.1 ( 27 Mar 2010 )

  02 Feb 2010; <slep@gentoo.org> -acutil-5.4.12.ebuild,
  acutil-5.4.14.ebuild:
  fix QA using python eclass

  12 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-5.4.14.ebuild:
  add acutil-5.4.14.ebuild

  21 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-5.4.12.ebuild:
  version bump

  29 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/5.4.10-Makefile.patch, +acutil-5.4.10.ebuild, +metadata.xml:
  initial commit
