@@ -1,6 +1,8 @@
 DIST authconfig-5.4.14.tar.bz2 558380 RMD160 52bef54c3530df7bc3a6da327b2211ca2d8f2559 SHA1 3f820f697136350ca9f2d41ac8f1164441aff516 SHA256 1e8456d807e1b993b0daef27544f5be7f5ae828764dabaa0f48b67c074dd61f8
 DIST authconfig-6.1.1.tar.bz2 580850 RMD160 c356143355fe32cac10b0f4a6e6f6d9745baff77 SHA1 a4045f86baa8ad2abf72d20da39d570eac16aa4a SHA256 a9ed4a8e9559f325ea93b9f4a5e7c6bf14ccab2b181da6dbb2a3bbacbebad1e0
+DIST authconfig-6.1.6.tar.bz2 616620 RMD160 43710c8efe9c1d79201ffc38f18a477d5d8ff2e6 SHA1 c7eb742293ec38097dbc85be4def06911a4b1287 SHA256 77e596e95190682c0a68c0da8e300d63a2398132b567482bb7e600af3965d129
 EBUILD acutil-5.4.14.ebuild 827 RMD160 5c95b64317ce13144f7ef9184eae6121f843894e SHA1 44dfbf7a7fdca50f70c3ccad0ea95c31211de0d0 SHA256 f5879bfe3fc3b441b8cb32618889f3d545c20969a2e9738921e305f58fd50263
 EBUILD acutil-6.1.1.ebuild 809 RMD160 f595df72e708bc2baf3077dcb18996aa98712fd1 SHA1 cf457feeb50952e2509eeec093cc8c4f580f0638 SHA256 3a0370514ec381e0ab0568797e3d93b31c0f2f26ca4f53f7748183f115a5826c
-MISC ChangeLog 687 RMD160 7525bb75a1e9431bb2a645a17a4d61ad12cafec1 SHA1 610e32727afb0480286ee49ae74749644038f268 SHA256 c473cbba8ce2a751f0404f82b3793b4be9c1856e5d2b5ae740ed721e05d076d0
+EBUILD acutil-6.1.6.ebuild 809 RMD160 f595df72e708bc2baf3077dcb18996aa98712fd1 SHA1 cf457feeb50952e2509eeec093cc8c4f580f0638 SHA256 3a0370514ec381e0ab0568797e3d93b31c0f2f26ca4f53f7748183f115a5826c
+MISC ChangeLog 785 RMD160 f6a47f78d79cbd0f61a1d1f861d06c84fbda2f60 SHA1 80047240adea6d21a29ed1b789bf5924b6fa09d3 SHA256 367503684da0638e879b4a9ed22eb8af083b043761160d8ba116259380959abe
 MISC metadata.xml 709 RMD160 26d2fa4257f021f5731b158f37ce28e1558d97e2 SHA1 8d40ff3611414c8477e6729deed970e8be348be7 SHA256 9924673180a21100ca72a07d64b77735785d22160e1811dc32297a7b07abca8b
