@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*acutil-6.1.6
+
+  07 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.6.ebuild:
+  bump
+
   27 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> +acutil-6.1.1.ebuild:
   version bump
 
